TEST_PROGRAMS/INVALID/Olivier_Melancon/assign_everywhere.min
var n: int;

while n = 1 do
	print "If you see this, magic occured."
done
